--- a/src/pages/Pagina404/index.html
+++ b/src/pages/Pagina404/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird</title>
+    <link rel="icon" href="../../../public/favicon.ico" />
+    <title>Pagina 404</title>
 </head>
 <body>
     <canvas id="game-canvas" width="320px" height="480px"></canvas>
